--- a/icr-hub/miccu.html
+++ b/icr-hub/miccu.html
@@ -25,24 +25,24 @@ __NOTOC__
 <div style="float: right;margin: 0.5em;">
 [[Файл:Miccu.png|безрамки|295x295пкс]]
 </div>
-== Общая информация ==
-'''M.I.C.C.U. (modernized internal control core unit)''' - модернизированное основное ядро внутреннего надзора - основная служба безопасности зоны 46K. Наряду с другими СОиБ является многофункциональной. В супрасистему M.I.C.C.U. входят 4 системы, протокол 7.1 и подсистемы эксплуатации объектов инфраструктуры.<br>
-Работая в штатном режиме - M.I.C.C.U. использует лишь подсистемы. При проявлении угрозы в комплексе активируются системы. 
-== История создания ==
-M.I.C.C.U. появилась как результат экспериментов над первыми советскими прототипами искусственного интеллекта. Ранее в инженерно-исследовательском институте города '''███████''' под руководством отдела ГРУ-П планировалось создать суперкомпьютер, основанный на аномальной энергии, который бы решил проблемы плановой экономики и приблизил бы наступление коммунизма. Но отток финансирования и общий упадок экономики привел к заморозке проекта. После развала СССР и обнародования документов ГРУ-П а также перетечке кадров бывшего ГРУ-П в новый Российский Филиал Фонда, работа над суперкомпьютером продолжилась уже в Зоне-7. 18.05.1998 появился первый прототип СОиБ названной I.C.C., но впервые полноценно введенной в эксплуатацию только в 2006 году в Зоне-78 ''(на данный момент не функционирует)''. После инцидента №78-315 ██.██.2009, и его последующего анализа было выяснено, что I.C.C. работало безукоризненно на протяжении всего инцидента, одной из ведущих проблем была нехватка полномочий СОиБ в урегулировании чрезвычайной ситуации. Совет Смотрителей был приятно удивлен эффективностью СОиБ и дал добро на дальнейшие модификации. Таким образом, в 2013 году, свет увидел M.I.C.C.U.
-== Системы ==
+<h3>Общая информация</h3>
+<p><b>M.I.C.C.U. (modernized internal control core unit)</b> - модернизированное основное ядро внутреннего надзора - основная служба безопасности зоны 46K. Наряду с другими СОиБ является многофункциональной. В супрасистему M.I.C.C.U. входят 4 системы, протокол 7.1 и подсистемы эксплуатации объектов инфраструктуры.<br>
+Работая в штатном режиме - M.I.C.C.U. использует лишь подсистемы. При проявлении угрозы в комплексе активируются системы.</p>
+<h3>История создания</h3>
+<p>M.I.C.C.U. появилась как результат экспериментов над первыми советскими прототипами искусственного интеллекта. Ранее в инженерно-исследовательском институте города '''███████''' под руководством отдела ГРУ-П планировалось создать суперкомпьютер, основанный на аномальной энергии, который бы решил проблемы плановой экономики и приблизил бы наступление коммунизма. Но отток финансирования и общий упадок экономики привел к заморозке проекта. После развала СССР и обнародования документов ГРУ-П а также перетечке кадров бывшего ГРУ-П в новый Российский Филиал Фонда, работа над суперкомпьютером продолжилась уже в Зоне-7. 18.05.1998 появился первый прототип СОиБ названной I.C.C., но впервые полноценно введенной в эксплуатацию только в 2006 году в Зоне-78 ''(на данный момент не функционирует)''. После инцидента №78-315 ██.██.2009, и его последующего анализа было выяснено, что I.C.C. работало безукоризненно на протяжении всего инцидента, одной из ведущих проблем была нехватка полномочий СОиБ в урегулировании чрезвычайной ситуации. Совет Смотрителей был приятно удивлен эффективностью СОиБ и дал добро на дальнейшие модификации. Таким образом, в 2013 году, свет увидел M.I.C.C.U.</p>
+<h3>Системы</h3>
 [[Файл:MICCU-sys.png|справа|безрамки|300x300пкс]]
-=== SETTA ===
+<h4>SETTA</h4>
 Система SETTA оперативно собирает все возможные данные / показания с датчиков и оценивает ситуацию, предоставляя отчет FARIA.
-=== FARIA ===
+<h4>FARIA</h4>
 FARIA предлагает методы борьбы, наиболее эффективные, рациональные, жестокие и антигуманные.
-=== TUSSE ===
+<h4>TUSSE</h4>
 Система TUSSE - моральный компас, предлагает способы уменьшить человеческие потери и минимизировать ущерб сотрудникам. Также, если SCP разумен, старается минимизировать ущерб и для аномального объекта, для возможности дальнейшего сотрудничества.
-=== MEZU ===
+<h4>MEZU</h4>
 MEZU включает в себя основные подсистемы и меры противодействия опасному воздействию.
-=== Протокол 7.1 ===
+<h4>Протокол 7.1</h4>
 Протокол 7.1 содержит в себе наборы команд, при помощи которых можно вмешается в структуру M.I.C.C.U., но крайне не рекомендуется делать это во время эксплуатации супрасистемы, может привести к критическим сбоям.
-== Подсистемы ==
+<h3>Подсистемы</h3>
 M.I.C.C.U. предназначена для осуществления безопасной эксплуатации объектов инфраструктуры.
 
 M.I.C.C.U. включает в себя следующие подсистемы:
@@ -51,7 +51,7 @@ M.I.C.C.U. включает в себя следующие подсистемы:
 *Пожарно-охранную сигнализацию
 *Подсистему контроля и управления доступом
 *Видеонаблюдение
-===Подсистема контроля технологических параметров===
+<h4>Подсистема контроля технологических параметров</h4>
 Подсистема контроля технологических параметров предназначена для осуществления диспетчерского контроля параметров технологического оборудования объекта и обеспечивает выполнение следующих основных функций:
 *Телеизмерение величин тока, фазных напряжений по каждой фазе каждого ввода шкафов управления
 *Телесигнализацию технологических параметров и характеристик инженерного оборудования на объекте
@@ -59,7 +59,7 @@ M.I.C.C.U. включает в себя следующие подсистемы:
 *Передачу данных в Центр сбора информации, диспетчерскую
 *Хранение и обработку информации
 *Визуализацию обработанных данных
-===Подсистема пожарной сигнализации===
+<h4>Подсистема пожарной сигнализации</h4>
 Подсистема пожарной сигнализации предназначена для осуществления охраны и обеспечения пожарной безопасности в служебных помещениях и коммуникационных тоннелях и обеспечивает выполнение следующих основных функций:
 *Контроль наличия возгорания
 *Ручное пожарное извещение
@@ -68,22 +68,22 @@ M.I.C.C.U. включает в себя следующие подсистемы:
 *Передачу данных в Центр сбора информации, диспетчерскую
 *Хранение и обработку информации
 *Визуализацию обработанных данных
-===Подсистема контроля и управления доступом===
+<h4>Подсистема контроля и управления доступом</h4>
 Подсистема контроля и управления доступом предназначена для осуществления контроля доступа в помещения и обеспечивает идентификацию персонала на основе информации, хранящейся в базе данных. ПКУД обеспечивает выполнение следующих основных функций:  
 *Контроль открытия дверей
 *Передачу данных в Центр сбора информации, диспетчерскую
 *Хранение и обработку информации
 *Визуализацию обработанных данных
-===Подсистема видеонаблюдения===
+<h4>Подсистема видеонаблюдения</h4>
 Подсистема видеонаблюдения предназначена для осуществления визуального наблюдения за входами в помещения, за коммуникационными тоннелями, камерами содержания, блоком класса D и обеспечивает выполнение следующих функций:
 *Визуальный контроль за входами в служебные помещения
 *Визуальный контроль за камерами содержания, блоком класса D без «слепых зон»
 *Передачу данных в Центр сбора информации, диспетчерскую
 *Запись видеосигнала на жёсткий диск
 *Хранение и обработку информации
-== Протокол 7.1: Перечень специальных команд ==
+<h3>Протокол 7.1: Перечень специальных команд</h3>
 
-<table class="fandom-table">
+<table>
 <tr>
 <td style='background: lightblue'>P-E
 </td>
@@ -105,7 +105,7 @@ M.I.C.C.U. включает в себя следующие подсистемы:
 <td>Процедуры безопасности
 </td></tr></table>
 <br>
-<table class="fandom-table">
+<table>
 <tr>
 <th colspan="4">Процедуры M.I.C.C.U.
 </th></tr>
