--- a/icr-hub/miccu.html
+++ b/icr-hub/miccu.html
@@ -20,12 +20,9 @@
 </header>
 
 <main>
-  <h1>Досье Учреждения: Зона 46K</h1>
-__NOTOC__
-<div style="float: right;margin: 0.5em;">
-[[Файл:Miccu.png|безрамки|295x295пкс]]
-</div>
+  <h1>M.I.C.C.U.</h1>
 <h3>Общая информация</h3>
+<div style="float: right;margin: 0.5em;"><img src="https://i.ibb.co/r2G3nNr/Miccu-l.png" width="100%"></div>
 <p><b>M.I.C.C.U. (modernized internal control core unit)</b> - модернизированное основное ядро внутреннего надзора - основная служба безопасности зоны 46K. Наряду с другими СОиБ является многофункциональной. В супрасистему M.I.C.C.U. входят 4 системы, протокол 7.1 и подсистемы эксплуатации объектов инфраструктуры.<br>
 Работая в штатном режиме - M.I.C.C.U. использует лишь подсистемы. При проявлении угрозы в комплексе активируются системы.</p>
 <h3>История создания</h3>
