--- a/icr-hub/miccu.html
+++ b/icr-hub/miccu.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="icr-style.css">
   <link rel="icon" href="https://i.ibb.co/37WNfwC/zone46-logo.png">
-  <title>Зона 46K - Досье учреждения</title>
+  <title>Зона 46K - M.I.C.C.U.</title>
 </head>
 <html>
 <body>
@@ -22,13 +22,13 @@
 <main>
   <h1>M.I.C.C.U.</h1>
 <h3>Общая информация</h3>
-<div class="map"><img style='border: 1px solid black;' src="https://i.ibb.co/r2G3nNr/Miccu-l.png" width="100%"></div>
-<p><b>M.I.C.C.U. (modernized internal control core unit)</b> - модернизированное основное ядро внутреннего надзора - основная служба безопасности зоны 46K. Наряду с другими СОиБ является многофункциональной. В супрасистему M.I.C.C.U. входят 4 системы, протокол 7.1 и подсистемы эксплуатации объектов инфраструктуры.<br>
-Работая в штатном режиме - M.I.C.C.U. использует лишь подсистемы. При проявлении угрозы в комплексе активируются системы.</p>
+<div class="map"><img style='border: 1px solid black;' src="https://i.ibb.co/r2G3nNr/Miccu-l.png" width="100%" /></div>
+<b>M.I.C.C.U. (modernized internal control core unit)</b> - модернизированное основное ядро внутреннего надзора - основная служба безопасности зоны 46K. Наряду с другими СОиБ является многофункциональной. В супрасистему M.I.C.C.U. входят 4 системы, протокол 7.1 и подсистемы эксплуатации объектов инфраструктуры.<br>
+Работая в штатном режиме - M.I.C.C.U. использует лишь подсистемы. При проявлении угрозы в комплексе активируются системы.
 <h3>История создания</h3>
-<p>M.I.C.C.U. появилась как результат экспериментов над первыми советскими прототипами искусственного интеллекта. Ранее в инженерно-исследовательском институте города '''███████''' под руководством отдела ГРУ-П планировалось создать суперкомпьютер, основанный на аномальной энергии, который бы решил проблемы плановой экономики и приблизил бы наступление коммунизма. Но отток финансирования и общий упадок экономики привел к заморозке проекта. После развала СССР и обнародования документов ГРУ-П а также перетечке кадров бывшего ГРУ-П в новый Российский Филиал Фонда, работа над суперкомпьютером продолжилась уже в Зоне-7. 18.05.1998 появился первый прототип СОиБ названной I.C.C., но впервые полноценно введенной в эксплуатацию только в 2006 году в Зоне-78 ''(на данный момент не функционирует)''. После инцидента №78-315 ██.██.2009, и его последующего анализа было выяснено, что I.C.C. работало безукоризненно на протяжении всего инцидента, одной из ведущих проблем была нехватка полномочий СОиБ в урегулировании чрезвычайной ситуации. Совет Смотрителей был приятно удивлен эффективностью СОиБ и дал добро на дальнейшие модификации. Таким образом, в 2013 году, свет увидел M.I.C.C.U.</p>
+M.I.C.C.U. появилась как результат экспериментов над первыми советскими прототипами искусственного интеллекта. Ранее в инженерно-исследовательском институте города '''███████''' под руководством отдела ГРУ-П планировалось создать суперкомпьютер, основанный на аномальной энергии, который бы решил проблемы плановой экономики и приблизил бы наступление коммунизма. Но отток финансирования и общий упадок экономики привел к заморозке проекта. После развала СССР и обнародования документов ГРУ-П а также перетечке кадров бывшего ГРУ-П в новый Российский Филиал Фонда, работа над суперкомпьютером продолжилась уже в Зоне-7. 18.05.1998 появился первый прототип СОиБ названной I.C.C., но впервые полноценно введенной в эксплуатацию только в 2006 году в Зоне-78 ''(на данный момент не функционирует)''. После инцидента №78-315 ██.██.2009, и его последующего анализа было выяснено, что I.C.C. работало безукоризненно на протяжении всего инцидента, одной из ведущих проблем была нехватка полномочий СОиБ в урегулировании чрезвычайной ситуации. Совет Смотрителей был приятно удивлен эффективностью СОиБ и дал добро на дальнейшие модификации. Таким образом, в 2013 году, свет увидел M.I.C.C.U.
 <h3>Системы</h3>
-[[Файл:MICCU-sys.png|справа|безрамки|300x300пкс]]
+<div class='imagee'><img src='https://i.ibb.co/nMC3j1j/MICCU.png' width='100%' /></div>
 <h4>SETTA</h4>
 Система SETTA оперативно собирает все возможные данные / показания с датчиков и оценивает ситуацию, предоставляя отчет FARIA.
 <h4>FARIA</h4>
