--- a/nsfw-hub/mtf-fi-69/index.html
+++ b/nsfw-hub/mtf-fi-69/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-  <link rel="stylesheet" href="code-pink.css">
+  <link rel="stylesheet" href="https://prince-oflynn.github.io/nsfw-hub/code-pink.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
   <title>Снаряжение бойцов МОГ</title>
 </head>
@@ -36,6 +36,7 @@
 </ul>
 <h4>Особое снаряжение:</h4>
 <ul>
+  <li><a href='https://prince-oflynn.github.io/nsfw-hub/mtf-fi-69/item-552'>Изделие-552</a></li>
   <li>Питьевая вода 5л.</li>
   <li>Ароматические свечи (Фруктовые, цветочные, кровянные).</li>
   <li>Фалоимитаторы различной длинны и диаметров.</li>
