--- a/nsfw-hub/mtf-fi-69/item-552.html
+++ b/nsfw-hub/mtf-fi-69/item-552.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="https://prince-oflynn.github.io/nsfw-hub/code-pink.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
-  <title>Снаряжение бойцов МОГ</title>
+  <title>Изделие-552</title>
 </head>
 <html>
 <body>
