--- a/saylon.html
+++ b/saylon.html
@@ -11,7 +11,7 @@
 <body>
 <div class='header'>
   <div class='logo-header'>
-    <img src="https://files.scpfoundation.net/local--files/theme:technoblast/logoaiad.png" width="100px" border="0"></div>
+    <img src="https://files.scpfoundation.net/local--files/theme:technoblast/logoaiad.png" width="100%" border="0"></div>
   <div class='header-flex';>
     <div class='text-header'>SCP Foundation</div>
 	<div class='text-header1'>Russian Branch</div>
