--- a/saylon.html
+++ b/saylon.html
@@ -18,9 +18,11 @@
   </div>
 </div>
 <main>
-<h1 style='color: #00aba8'>Ивент</h1>
+<article>
+<h1>Ивент</h1>
 
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSx91qCKGpzxc5NksIjIweugAaDVvXniUx-WiwPIGEjQIbkp6ucOlrDl5wB9FPJE2euCia727oz3T9N/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+</article>
 </main>
 </body>
 </html>
